--- a/aports/device/device-sony-yuga/APKBUILD
+++ b/aports/device/device-sony-yuga/APKBUILD
@@ -9,7 +9,7 @@ depends="linux-sony-yuga mkbootimg"
 makedepends=""
 install=""
 subpackages=""
-source="deviceinfo 90-android.rules fb-workaround.sh "
+source="deviceinfo 90-android.rules fb-workaround.sh udev-hack.sh"
 options="!check"
 
 build() {
@@ -23,8 +23,11 @@ package() {
 		"$pkgdir"/etc/udev/rules.d/90-android.rules
 	install -D -m644 "$srcdir"/fb-workaround.sh \
 		"$pkgdir"/etc/profile.d/fb-workaround.sh
+        install -D -m644 "$srcdir"/udev-hack.sh \
+ 		"$pkgdir"/etc/profile.d/00-udev-hack.sh
 }
 
-sha512sums="61c2309f551ae558387deea13b30d13e3a49af36b10c981e2b498d43f9c094e6821275613b977ade22137b057248112fa71215f696977cd78a076c18d35c430f  deviceinfo
+sha512sums="36cd49c24305e86601124c70f9bbc990866dcffa2202956a450ab4049b7a00e23c93ae6869f094a9e2a5b42ce7a1407d0f73341e0c07b2e695295cc50fefa81e  deviceinfo
 1dd1196aa9abe0308a0841147e7e5c6eb50da742cfc3194b90ef22a62d034b43ddade70384b78ab38fa0177da5a822f2a40f1386f4ecd591e2ecc80cb679133a  90-android.rules
-13f36f33cfae5e759b3889bc4e308324fd9bcf1cc7b097bbbe3646f1243b3bc06e1b1594cc8578c52c304a2b5006babd978c5b3f258769892e80552457889f99  fb-workaround.sh"
+281937447a73c18e8eec195cbf485fcd513aec20b8df559c26b89fbefa5872c41865cba2440e2cc8a9cc76801bca9ab61f9562c536c6f5f10c925e3ca7f372f3  fb-workaround.sh
+4f528656c4febb18742e89552dfe7fdc824ed4ad6ad2777d20b4f55040edd93d8e3ea657baabcdbe77bd0fb4bd3d23e5e0b2dae574f0df6723b2e26216ee81e1  udev-hack.sh"
